# ayon-openpype-import

./: .gitignore  README.md  __init__.py  create_package.py  package.py  settings.py  version.py
frontend/: package.json
frontend/src/: App.jsx  SettingsFrontend.jsx  StatusTable.jsx  app.jsx  index.jsx
frontend/src/components/: AppWrapper.jsx  FileUpload.jsx
server/: __init__.py
server/frontend/: package.json
server/frontend/src/: StatusTable.jsx  context.js  index.jsx
server/frontend/src/components/: AnatomyPresetDropdown.jsx  InlineSpinner.jsx
services/processor/: Dockerfile  Makefile  pyproject.toml
services/processor/processor/: __main__.py  ayon.py  checks.py  common.py  deploy.py  folders.py  main.old  parser.py  products.py  project.py  representations.py  subsets.py  versions.py
