[tool.poetry]
name = "ayon-openpype-import-processor"
version = "0.2.3"
description = ""
authors = ["Martastain <martas@imm.cz>"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.5"
rich = "^13.3.1"
nxtools = "^1.6"
requests = "^2.28"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
